--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Simple Snake Game</title>
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="assets/jquery191.min.js"></script>
 	<script src="assets/script.js"></script>
 </head>
 <body>
